[package]
name = "recoord"
version = "0.2.0"
authors = ["Snapstromegon"]
edition = "2021"
description = "Handle coordinates in different formats."
readme = "README.md"
repository = "https://github.com/Snapstromegon/recoord"
license = "MIT"
keywords = [
  "coordinate",
  "location",
  "open-street-maps",
  "geohash",
  "Nominatim",
]
categories = ["encoding", "parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.5", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "1.0.30"
tokio = { version = "1", features = ["full"], optional = true }

[features]
format_any = []
format_dd = ["dep:regex", "format_any"]
format_dms = ["dep:regex", "format_any"]
format_geohash = ["format_any"]
serde = ["dep:serde"]
resolve_osm = ["dep:reqwest", "dep:tokio", "dep:serde"]


[package.metadata.cargo-all-features]
denylist = ["serde", "format_any"]
skip_optional_dependencies = true
