[package]
name = "recoord"
version = "0.3.0"
authors = ["Snapstromegon"]
edition = "2021"
description = "Handle coordinates in different formats."
readme = "README.md"
repository = "https://github.com/Snapstromegon/recoord"
license = "MIT"
keywords = [
  "coordinate",
  "location",
  "open-street-maps",
  "geohash",
  "Nominatim",
]
categories = ["encoding", "parsing"]
exclude = [
  ".github/**",
]

[package.metadata.docs.rs]
features = ["all"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { version = "1.5", optional = true }
reqwest = { version = "0.13", features = ["json", "blocking"], optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.17"

[features]
all = ["format_all", "resolve_all", "serde"]
default = ["reqwest?/default"]

format_any = []
format_all = ["format_dd", "format_dms", "format_geohash"]
format_dd = ["dep:regex", "format_any"]
format_dms = ["dep:regex", "format_any"]
format_geohash = ["format_any"]
serde = ["dep:serde"]
resolve_all = ["resolve_osm"]
resolve_osm = ["dep:reqwest", "dep:serde"]


[package.metadata.cargo-all-features]
denylist = ["serde", "format_any", "format_all", "resolve_all"]
skip_optional_dependencies = true
